--- a/index.html
+++ b/index.html
@@ -28,42 +28,81 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+      font-family: 'Lato', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      background: black;
-      color: white;
+      background: #f4f3ef;
+      color: #555;
     }
 
     a {
-      color: #fafafa;
+      color: #888;
     }
 
     main {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      /* align-items: center; */
+      background: #fff;
+      margin: 20px;
+      top: 5vh;
+      min-height: 50vh;
+      padding: 50px 100px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    ul {
+      line-height: 1.5em;
     }
   </style>
+  <script type="text/javascript">
+    var navSource = window;
+    var navigatorExists = navSource.navigator;
+
+    // Check for browser support of service worker
+    if (navigatorExists && 'serviceWorker' in navSource.navigator) {
+      navSource.navigator.serviceWorker
+        .register('service-worker.js')
+        .then(registration => {
+          // Successful registration
+          console.log(
+            'Hooray. Registration successful, scope is:',
+            registration.scope
+          );
+        })
+        .catch(error => {
+          // Failed registration, service worker won’t be installed
+          console.log(
+            'Whoops. Service worker registration failed, error:',
+            error
+          );
+        });
+    }
+  </script>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <body>
     <main>
       <h1>Paul Jensen</h1>
       <h2>About me</h2>
       <p>I'm a freelance web developer.</p>
       <p>
-        I'm Danish, born and raised in the UK, and I'm currently working in
-        Sweden.
-      </p>
-      <p>
         I'm also the author of Manning's
         <a
           href="https://www.manning.com/books/cross-platform-desktop-applications"
           >"Cross Platform Desktop Applications"</a
         >.
+      </p>
+      <p>
+        I'm currently working in Sweden, running a small web development studio.
       </p>
       <h2>Connect online</h2>
       <ul>
