--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
         });
     }
   </script>
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Lato"
+    rel="stylesheet"
+    media="screen"
+  />
   <body>
     <main>
       <h1>Paul Jensen</h1>
