--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     }
   </script>
   <link
+    async
     href="https://fonts.googleapis.com/css?family=Lato"
     rel="stylesheet"
     media="screen"
