--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
       line-height: 1.5em;
     }
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-15540477-1"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-15540477-1');
+  </script>
+
   <script type="text/javascript">
     var navSource = window;
     var navigatorExists = navSource.navigator;
