--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=UA-15540477-1"
-  ></script>
+  <link
+    rel="preload"
+    as="script"
+    href="https://www.googletagmanager.com/gtag/js?id=UA-15540477-1"
+  />
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
