Here's another tweak

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <link
-    rel="preload"
+    rel="preconnect"
     as="script"
     href="https://www.googletagmanager.com/gtag/js?id=UA-15540477-1"
   />
