--- a/index.html
+++ b/index.html
@@ -14,29 +14,6 @@
   </head>
   <style type="text/css">
     /* latin-ext */
-    @font-face {
-      font-family: 'Lato';
-      font-style: normal;
-      font-weight: 400;
-      src: local('Lato Regular'), local('Lato-Regular'),
-        url(https://fonts.gstatic.com/s/lato/v14/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2)
-          format('woff2');
-      unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-        U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-    }
-    /* latin */
-    @font-face {
-      font-family: 'Lato';
-      font-style: normal;
-      font-weight: 400;
-      src: local('Lato Regular'), local('Lato-Regular'),
-        url(https://fonts.gstatic.com/s/lato/v14/S6uyw4BMUTPHjx4wXiWtFCc.woff2)
-          format('woff2');
-      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-        U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-        U+2212, U+2215, U+FEFF, U+FFFD;
-    }
-
     * {
       box-sizing: border-box;
       position: relative;
@@ -52,31 +29,31 @@
     }
 
     body {
-      font-family: 'Lato', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-        Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+      font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, Segoe UI,
+        Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      background: #f4f3ef;
-      color: #555;
+      color: #000;
     }
 
     a {
-      color: #555;
+      padding: 5px;
+      color: #000;
+      text-decoration: none;
+      border-bottom: dashed 1px rgba(0, 0, 0, 0.25);
+      background: rgb(255, 247, 200);
     }
 
     main {
       display: flex;
       flex-direction: column;
-      background: #fff;
       margin: 20px;
       top: 5vh;
       min-height: 50vh;
-      padding: 50px 100px;
-      border-radius: 10px;
-      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+      padding: 50px;
     }
 
     h1 {
@@ -85,6 +62,10 @@
 
     ul {
       line-height: 1.5em;
+    }
+
+    li {
+      padding: 5px 0px;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -130,8 +111,11 @@
   <body>
     <main>
       <h1>Paul Jensen</h1>
-      <h2>About me</h2>
-      <p>I'm a freelance web developer.</p>
+      <p>I'm from London, United Kingdom.</p>
+      <p>
+        I run a web development consultancy called
+        <a href="https://anephenix.com">Anephenix</a>.
+      </p>
       <p>
         I'm also the author of Manning's
         <a
@@ -140,7 +124,7 @@
         >.
       </p>
       <p>
-        I'm currently working in Sweden, running a small web development studio.
+        I am currently working on-site with a client in Gothenburg, Sweden.
       </p>
       <h2>Connect online</h2>
       <ul>
