Added some adjustments

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <h1>Paul Jensen</h1>
       <p>I'm from London, United Kingdom.</p>
       <p>
-        I run a web development consultancy called
+        I run a product development studio called
         <a href="https://anephenix.com">Anephenix</a>.
       </p>
       <p>
@@ -124,7 +124,7 @@
         >.
       </p>
       <p>
-        I am currently working on-site with a client in Gothenburg, Sweden.
+        I am currently working remotely for a client in Sweden.
       </p>
       <h2>Connect online</h2>
       <ul>
@@ -135,7 +135,7 @@
         </li>
         <li><a href="https://github.com/paulbjensen">GitHub</a></li>
         <li><a href="https://twitter.com/paulbjensen">Twitter</a></li>
-        <li><a href="https://medium.com/@paulbjensen">Medium</a></li>
+        <li><a href="https://medium.com/@paulbjensen">My blog</a></li>
         <li><a href="mailto:paulbjensen@gmail.com">Email</a></li>
       </ul>
     </main>
