Updated the homepage contents and added Plausible tracking

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <script defer data-domain="paulbjensen.co.uk" src="https://plausible.io/js/script.js"></script>
     <title>Paul Jensen</title>
   </head>
   <style type="text/css">
@@ -111,7 +112,7 @@
   <body>
     <main>
       <h1>Paul Jensen</h1>
-      <p>I'm from London, United Kingdom.</p>
+      <p>I live in Colchester, United Kingdom.</p>
       <p>
         I run a product development studio called
         <a href="https://anephenix.com">Anephenix</a>.
@@ -124,7 +125,7 @@
         >.
       </p>
       <p>
-        I am currently working remotely for a client in Sweden.
+        I am available for consulting.
       </p>
       <h2>Connect online</h2>
       <ul>
@@ -134,7 +135,7 @@
           >
         </li>
         <li><a href="https://github.com/paulbjensen">GitHub</a></li>
-        <li><a href="https://twitter.com/paulbjensen">Twitter</a></li>
+        <li><a href="https://bsky.app/profile/paulbjensen.bsky.social">Bluesky</a></li>
         <li><a href="https://medium.com/@paulbjensen">My blog</a></li>
         <li><a href="mailto:paulbjensen@gmail.com">Email</a></li>
       </ul>
